// Create: Logistics Control
plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev'
    id 'idea'
}

version = logistics_control_version
group = 'io.github.nbcss.logisticscontrol'

repositories {
    mavenCentral()
    maven {
        name = "NeoForged"
        url = "https://maven.neoforged.net/releases"
    }
    maven {
        name = "Create Maven"
        url = "https://maven.createmod.net"
    }
    maven {
        name = "Registrate"
        url = "https://maven.ithundxr.dev/snapshots"
    }
    maven {
        name = "Deployer Maven"
        url = "https://maven.liukrast.net"
    }
    maven {
        name = "BlameJared (JEI)"
        url = "https://maven.blamejared.com"
    }
}

base {
    archivesName = 'logisticscontrol'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // No dev run here: this mod ships bundled inside Create: Factory Controller and loads into the root project's
    // client via `localRuntime project(':logisticscontrol')`. Defining a `client` run here would add a second
    // `runClient` task that an unqualified `runClient` invocation would launch as a separate game instance.

    mods {
        "createlogisticscontrol" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    localRuntime
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    compileOnly "com.simibubi.create:create-1.21.1:${create_version}"
    localRuntime "com.simibubi.create:create-1.21.1:${create_version}"

    // Deployer (soft)
    compileOnly("net.liukrast:deployer-1.21.1:${deployer_version}") { transitive = false }

    // JEI (optional): compile against the API only; the bundled runtime uses the root project's JEI.
    compileOnly "mezz.jei:jei-1.21.1-neoforge-api:${jei_version}"
}

// Expand mod metadata into the mods.toml template, same pattern as the root project.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : 'createlogisticscontrol',
            mod_name               : 'Create: Logistics Control',
            mod_license            : mod_license,
            mod_version            : logistics_control_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
